Add and style navbar

--- a/index.html
+++ b/index.html
@@ -7,40 +7,55 @@
         <title>Webpage</title>
     </head>
     <body class="container">
-        <div class="container">
-            <div class="title">Andy Pak</div>
-            <div>
-                <ul>
-                    <li>McMaster Software Engineer</li>
-                </ul>
+        <nav class="navbar">
+            <div class="name">
+                <img src="https://avatars.githubusercontent.com/u/147354924?v=4" alt="PakmanGames">
+                <div class="subtitle">
+                    <a href="https://github.com/PakmanGames">PakmanGames</a>
+                </div>
             </div>
-            <div class="buttons">
-                <button>Github Link</button>
-                <button>LinkedIn link</button>
-                <button>Instagram link</button>
-                <button>Email link</button>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="content">
+            <div class="container">
+                <div class="title">Andy Pak</div>
+                <div>
+                    <ul>
+                        <li>McMaster Software Engineer</li>
+                    </ul>
+                </div>
+                <div class="buttons">
+                    <button>Github Link</button>
+                    <button>LinkedIn link</button>
+                    <button>Instagram link</button>
+                    <button>Email link</button>
+                </div>
             </div>
-        </div>
-        <div class="container">
-            <div>
-                <div class="title">Languages</div>
-                <ul>
-                    <li>Java</li>
-                    <li>Python</li>
-                    <li>JavaScript</li>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                </ul>
+            <div class="container">
+                <div>
+                    <div class="title">Languages</div>
+                    <ul>
+                        <li>Java</li>
+                        <li>Python</li>
+                        <li>JavaScript</li>
+                        <li>HTML5</li>
+                        <li>CSS3</li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="title">Tools</div>
+                    <ul>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                        <li>VSCode</li>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <div class="title">Tools</div>
-                <ul>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>VSCode</li>
-                </ul>
-            </div>
-        </div>
+        </div class="container">
         <script src="./script.js"></script>
     </body>
 </html>
