Style left info card, add buttons and functionality

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div class="name">
                 <img src="https://avatars.githubusercontent.com/u/147354924?v=4" alt="PakmanGames">
                 <div class="subtitle">
-                    <a href="https://github.com/PakmanGames">PakmanGames</a>
+                    <a href="https://github.com/PakmanGames" target="_blank">PakmanGames</a>
                 </div>
             </div>
             <ul>
@@ -21,23 +21,19 @@
             </ul>
         </nav>
         <div class="content">
-            <div class="container">
+            <div class="container left-info">
                 <div class="title">Andy Pak</div>
-                <div>
-                    <ul>
-                        <li>McMaster Software Engineer</li>
-                    </ul>
-                </div>
+                <div>McMaster Software Engineer</div>
                 <div class="buttons">
-                    <button>Github Link</button>
-                    <button>LinkedIn link</button>
-                    <button>Instagram link</button>
-                    <button>Email link</button>
+                    <a href="https://github.com/PakmanGames" target="_blank" class="btn github"><img src="./images/github.svg" alt="github"></a>
+                    <a href="https://www.linkedin.com/in/andy-pak/" target="_blank" class="btn linkedin"><img src="./images/linkedin.svg" alt="linkedin"></a>
+                    <a href="https://www.instagram.com/pakmangames/" target="_blank" class="btn instagram"><img src="./images/instagram.svg" alt="instagram"></a>
+                    <a href="mailto:im.andy.pak@gmail.com" target="_blank" class="btn email"><img src="./images/envelope.svg" alt="mailto"></a>
                 </div>
             </div>
             <div class="container">
                 <div>
-                    <div class="title">Languages</div>
+                    <div class="subtitle">Languages</div>
                     <ul>
                         <li>Java</li>
                         <li>Python</li>
@@ -47,7 +43,7 @@
                     </ul>
                 </div>
                 <div>
-                    <div class="title">Tools</div>
+                    <div class="subtitle">Tools</div>
                     <ul>
                         <li>Git</li>
                         <li>GitHub</li>
