Create and style contact page with flex

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
         <link rel="stylesheet" href="./style.css">
-        <title>Webpage</title>
+        <title>Andy Pak</title>
     </head>
     <body class="container">
         <nav class="navbar">
@@ -16,8 +16,8 @@
             </div>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./pages/projects.html">Projects</a></li>
+                <li><a href="./pages/contact.html">Contact</a></li>
             </ul>
         </nav>
         <div class="content">
@@ -51,7 +51,7 @@
                     </ul>
                 </div>
             </div>
-        </div class="container">
+        </div>
         <script src="./script.js"></script>
     </body>
 </html>
