Create click animation for send button and warning text when inputs blank

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,6 +29,7 @@
             </div>
             <textarea type="text" placeholder="Message" class="message-box"></textarea>
             <button class="send-mail">Send</button>
+            <div class="warning"></div>
         </div>
 
         <script src="../key.js"></script>
